exports[`test Renders children. 1`] = `
<div>
  <h1
    className="brand">
    Tell Us About Yourself!
  </h1>
  <h1>
    hi
  </h1>
</div>
`;

exports[`test Renders. 1`] = `
<div>
  <h1
    className="brand">
    Tell Us About Yourself!
  </h1>
</div>
`;
